burger menu overflow fixed?

--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,15 @@ html {
 }
 
 body {
-  overflow-x: hidden;
   width: 100%;
   height: 100%;
   font-family: var(--font-secondary);
   background-color: #f9f3ed;
+  position: relative;
+}
+body,
+html {
+  overflow-x: hidden;
 }
 
 h1 {
@@ -38,6 +42,7 @@ li {
 
 img {
   max-width: 100%;
+  height: auto;
 }
 
 /* REGULAR CSS STYLING BELOW */
@@ -83,7 +88,7 @@ img {
   --color-white-900: #a6a6a6;
 }
 
-/* ----- LANDING PAGE -----*/
+/**************----- LANDING PAGE -----****************/
 
 .HeroTop {
   height: 65vh;
@@ -108,7 +113,7 @@ img {
   width: 100%;
 } */
 
-/* navigation */
+/***************** navigation ****************/
 #home_link_mobile {
   color: var(--color-navy);
   font-family: var(--font-logo);
@@ -120,10 +125,10 @@ img {
 .home_link {
   font-family: var(--font-logo);
 }
-/* .logotype {
-  font-size: 5rem;
-  color: var(--color-white);
-} */
+.home_link {
+  font-size: 1.5rem;
+  font-weight: 800;
+}
 
 .NavBar {
   display: flex;
@@ -143,7 +148,7 @@ img {
   background-repeat: no-repeat;
 }
 
-/* sticky menu */
+/********************** sticky menu ****************/
 .sticky_nav_menu {
   display: flex;
   flex-direction: column;
@@ -156,8 +161,12 @@ img {
   flex-direction: column;
   gap: 0.8rem;
 }
+.list_menu_sticky li:hover {
+  transform: scale(1.2);
+  transition: all 400ms ease-in-out;
+}
 
-/* burger menu */
+/******************* burger menu ****************/
 .burger_menu div {
   background-color: var(--color-accent-red);
   width: 2rem;
@@ -176,12 +185,12 @@ img {
 .line3 {
   transition: transform 400ms ease-in-out;
 }
-.submenu {
+/* .submenu {
   display: flex;
   flex-direction: column;
   gap: 0.9rem;
   z-index: 2;
-}
+} */
 .menu_name {
   font-weight: 700;
   font-size: 1.2rem;
@@ -200,15 +209,35 @@ img {
   width: auto;
   margin: 0 1.7rem;
 }
+
 li {
   height: 100%;
 }
+/**** flags  ****/
+.flag_dk {
+  background-image: url(../Assets/circle-flags_dkcircle_flag_dk.svg);
+  background-size: 1.2rem;
+  width: 1.2rem;
+  height: 1.2rem;
+}
+.flag_en {
+  background-image: url(../Assets/circle-flags_encircle_flag_en.svg);
+  background-size: 1.2rem;
+  width: 1.2rem;
+  height: 1.2rem;
+}
+.flags {
+  display: flex;
+  flex-direction: row;
+
+  align-items: center;
+  gap: 0.5rem;
+}
+
 @media only screen and (max-width: 600px) {
   .burger_menu {
     display: block;
     cursor: pointer;
-    /* position: relative; */
-    left: 85%;
   }
   .list_menu_burger {
     display: flex;
@@ -216,23 +245,24 @@ li {
     gap: 0;
     align-items: left;
     position: absolute;
-    right: 0;
-    top: 0;
+    right: -80vw;
     height: auto;
-    top: 3.5rem;
+    top: 56px;
     width: 60%;
     background-color: var(--color-primary-offwhite);
     justify-content: flex-start;
-    transform: translateX(100%);
-    transition: transform 0.5s ease-in-out;
+    /* transform: translateX(100%);
+    transition: transform 0.5s ease-in-out; */
 
     border-bottom-left-radius: 10%;
     border: 3px solid var(--color-navy);
     text-align: center;
+    transition: transform 1s;
   }
-  body {
-    overflow-x: hidden;
+  .list_menu_active {
+    transform: translateX(-80vw);
   }
+
   .list_menu_sticky {
     display: none;
   }
@@ -251,9 +281,7 @@ li {
     transform: translateX(100vh);
     transition: transform 400ms ease-in-out;
   }
-  .list_menu_active {
-    transform: translateX(0);
-  }
+
   .list_menu_burger li,
   .list_menu_active li {
     border-bottom: 3px solid var(--color-navy);
@@ -290,26 +318,6 @@ li {
     align-items: center;
     gap: 1rem;
   }
-}
-/* flags */
-.flag_dk {
-  background-image: url(../Assets/circle-flags_dkcircle_flag_dk.svg);
-  background-size: 1.2rem;
-  width: 1.2rem;
-  height: 1.2rem;
-}
-.flag_en {
-  background-image: url(../Assets/circle-flags_encircle_flag_en.svg);
-  background-size: 1.2rem;
-  width: 1.2rem;
-  height: 1.2rem;
-}
-.flags {
-  display: flex;
-  flex-direction: row;
-
-  align-items: center;
-  gap: 0.5rem;
 }
 
 /* links */
